--- a/03-html/stran.html
+++ b/03-html/stran.html
@@ -41,9 +41,9 @@
             <li>The pot should be white porcelain or glazed earthenware and have a partly serrated edge. It should have a lid that fits loosely inside the pot.</li>
             <li>The pot can be large or small, with a prescribed volume and weight.</li>
             <table>
-                Pot  Volume   Weight
-                large   310 ml (±8 ml)    200 g (±10 g)
-                small   350 ml (±4 ml)    118 g (±10 g)
+                <tr><th>Pot</th>     <th>Volume</th>            <th>Weight</th></tr>
+                <tr><th>large</th>   <td>310 ml (±8 ml)</td>    <td>200 g (±10 g)</td></tr>
+                <tr><th>small</th>   <td>350 ml (±4 ml)</td>    <td>118 g (±10 g)</td></tr>
             </table>
             <li>2 grams of tea (measured to ±2% accuracy) per 100 ml boiling water is placed into the pot.</li>
             <li>Freshly boiling water is poured into the pot to within 4-6 mm of the brim. Allow 20 seconds for water to cool.</li>
@@ -52,7 +52,7 @@
             <li>The brewed tea is then poured into a white porcelain or glazed earthenware bowl.</li>
             <li>The bowl can be large or small, with a prescribed capacity and weight.</li>
             <table>
-                <tr><th>Bowl</th>  <th>Capacity</th>   <th>Weight</th></tr>
+                <tr><th>Bowl</th>  <th>  Capacity</th><th>Weight</th></tr>
                 <tr><th>large</th>   <td>380 ml</td>  <td>200 g (±20 g)</td></tr>
                 <tr><th>small</th>   <td>200 ml</td>  <td>105 g (±20 g)</td></tr>
             </table>
