--- a/03-html/stran.html
+++ b/03-html/stran.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="sl">
-    <head>
-        <title>ISO 3103</title>
-        <meta charset="UTF-8">
+    <head\>
+        <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@4/tex-mml-chtml.js"></script>
+        <title><strong>ISO 3103</strong></title>
+        <meta charset="UTF-8">  
     </head>
     <body>
+
+         \[e^{i\pi} + 1 = 0\]
         <p><a href="https://en.wikipedia.org/wiki/ISO_3103">ISO 3103</a></p>
 
         <p>The content of this page has been slightly adapted from the Wikipedia page on ISO 3103 https://en.wikipedia.org/wiki/ISO_3103</p>
 
-        <p>ISO 3103 is a standard published by the International Organization for Standardization (commonly referred to as ISO), specifying a standardized method for brewing tea, possibly sampled by the standardized methods described in ISO 1839. It was originally laid down in 1980 as BS 6008:1980 by the British Standards Institution, and a revision was published in December, 2019 as ISO/NP 3103. It was produced by ISO Technical Committee 34 (Food products), Sub-Committee 8 (Tea).</p>
+        <p>ISO 3103 is a standard published by the International Organization for Standardization (commonly referred to as ISO), specifying a standardized method for <em>brewing tea</em>, possibly sampled by the standardized methods described in ISO 1839. It was originally laid down in 1980 as BS 6008:1980 by the British Standards Institution, and a revision was published in December, 2019 as ISO/NP 3103. It was produced by ISO Technical Committee 34 (Food products), Sub-Committee 8 (Tea).</p>
 
         <p>The abstract states the following:</p>
 
@@ -22,17 +25,17 @@
         <h3>Contents</h3>
 
         <ol>
-            <li>Details</li>
-            <li>Pot and bowl</li>
-            <li>Criticism</li>
-            <li>Competing standards</li>
+            <li><a href="#details">Details</a></li>
+            <li><a href="#potandbowl">Pot and bowl</a></li>
+            <li><a href="#criticism">Criticism</a></li>
+            <li><a href="#competingstandards">Competing standards</a></li>
             <li>See also</li>
             <li>References</li>
             <li>External links</li>
         </ol>
 
 
-        <h2>Details</h2>
+        <h2 id="details">Details</h2>
 
         <ul>
             <img src = "C:\Users\Janez\Documents\RP\tea-bowl.jpg" alt="Tea bowl">
@@ -62,17 +65,17 @@
         </ul>
 
 
-        <h2>Pot and bowl</h2>
+        <h2 id="potandbowl">Pot and bowl</h2>
 
         <p>An annex of the standard describes two alternative pots (310 ml and 150 ml) and corresponding bowls (380 ml and 200 ml) "which are in widespread use" for tea tasting, including engineering drawings of their cross sections. The type of pot described is also known as a taster's mug.</p>
 
 
-        <h2>Criticism</h2>
+        <h2 id="criticism">Criticism</h2>
 
         <p>The protocol has been criticized for omitting any mention of prewarming the pot. Ireland was the only country to object, and objected on technical grounds.</p>
 
 
-        <h2>Competing standards</h2>
+        <h2 id="competingstandards">Competing standards</h2>
 
         <p>In 2003, the Royal Society of Chemistry published a press release entitled "How to make a Perfect Cup of Tea".</p>
     </body>
