--- a/03-html/stran.html
+++ b/03-html/stran.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="sl">
-    <head\>
+    <head>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@4/tex-mml-chtml.js"></script>
-        <title><strong>ISO 3103</strong></title>
+        <title>ISO 3103</title>
         <meta charset="UTF-8">  
     </head>
     <body>
 
          \[e^{i\pi} + 1 = 0\]
-        <p><a href="https://en.wikipedia.org/wiki/ISO_3103">ISO 3103</a></p>
+        <p><strong><a href="https://en.wikipedia.org/wiki/ISO_3103">ISO 3103</a></strong></p>
 
         <p>The content of this page has been slightly adapted from the Wikipedia page on ISO 3103 https://en.wikipedia.org/wiki/ISO_3103</p>
 
