zamenjal z oblikovanje.css

--- a/03-html/stran.html
+++ b/03-html/stran.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="sl">
     <head>
-        <link rel="stylesheet" href="normalize.css">
+        <link rel="stylesheet" href="oblikovanje.css">
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@4/tex-mml-chtml.js"></script>
         <title>ISO 3103</title>
         <meta charset="UTF-8">  
