nevem kaj je drgac

--- a/03-html/stran.html
+++ b/03-html/stran.html
@@ -5,6 +5,10 @@
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@4/tex-mml-chtml.js"></script>
         <title>ISO 3103</title>
         <meta charset="UTF-8">  
+        <section id="uvod">
+            <h2>Uvod</h2>
+            <p>Dobrodošli na stran o standardu ISO 3103, ki določa način priprave čaja.</p>
+        </section>
     </head>
     <body>
 
